tests/syntax_errors/test82_2.tl
require "ifj21"
2x2
